<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClientActivity" >

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        android:textSize="20sp" />

    <Button
        android:id="@+id/send20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewStatus"
        android:layout_below="@+id/textViewStatus"
        android:text="@string/snd20Btn"
        android:onClick="onLockPcBtn" />

    <CheckBox
        android:id="@+id/checkBoxMute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/send20"
        android:layout_toRightOf="@+id/send20"
        android:text="@string/mute"
        android:onClick="onMuteChkBox" />

    <TextView
        android:id="@+id/textViewAStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send20"
        android:text="@string/connecting"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/seekBarVol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewAStatus"
        android:max="100" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/seekBarVol"
        android:layout_below="@+id/textViewStatus"
        android:onClick="onPauseBtn"
        android:text="@string/pauseBtn" />
    
</RelativeLayout>